correction classe titre

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body>* {
 	margin: 2vh 0;
 }
 
-body>header>#titre {
+body>header>#title {
 	letter-spacing: 4vw;
 	padding-left: 4vw;
 	font-size: 3rem;
