--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots');
 
 :root {
-	--col-background: white;
-	--col-text: rgb(95, 95, 95);
-	--col-cell: rgb(231, 231, 231);
+	--col-background: #ffffff;
+	--col-text: #5f5f5f;
+	--col-cell: #e7e7e7;
 	--col-cell-perfect: green;
 	--col-cell-correct: orange;
 	--col-cell-wrong: red;
@@ -88,7 +88,6 @@ body>header>#wordle-timer {
 
 body>header>#wordle-timer #time {
 	font-size: 2vw;
-	margin-left: -1vw;
 }
 
 body>header>#wordle-score {
@@ -104,6 +103,7 @@ body>header>.panel>h2 {
 
 body>header>.panel>h3 {
 	margin-bottom: 1vh;
+	margin-left: -1vw;
 	font-style: italic;
 }
 
